Issue #1806834 by lsolesen: Fixing IEF titles, button overlaps and entity reference headers

--- a/scss/contrib.scss
+++ b/scss/contrib.scss
@@ -10,8 +10,7 @@
 
 .form-item,
 .form-item .form-item {
-  margin-bottom: 0;
-  margin-top: 9px;
+  margin-bottom: 10px;
   padding-bottom: 0;
   padding-top: 0;
 }
@@ -47,7 +46,7 @@
 .field-widget-inline-entity-form .fieldset-wrapper {
   background: transparent;
   outline: 0;
-  padding: 0;
+  padding: 10px 0 0;
 }
 .field-widget-inline-entity-form .ief-form-bottom {
   padding-top: 40px;
