--- a/scss/shiny.scss
+++ b/scss/shiny.scss
@@ -636,6 +636,9 @@ input.form-submit,
 a.button {
   @include grey-button;
 }
+a.button {
+  display: inline-block;
+}
 /* Fix padding issue in Firefox */
 @-moz-document url-prefix() {
   input.form-submit {
@@ -737,6 +740,14 @@ table td {
 table.sticky-header {
   z-index: 99;
 }
+form .field-multiple-table {
+  margin-bottom: 10px;
+
+  th.field-label {
+    padding-left: 15px;
+  }
+}
+
 #views-form-commerce-orders-admin-page table td.views-field-commerce-order-total,
 #views-form-commerce-orders-admin-page table td.views-field-status {
   font-weight: 500;
